I use Path.of()instead Paths.get() is recommended by API note, class Paths  may be deprecated in a futur release